# core-crafter

./: .gitignore  AUTHORS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md
cmake/: rp2040_toolchain.cmake
dev/: CMakeLists.txt
dev/app/: CMakeLists.txt
dev/app/rp2040/: CMakeLists.txt  app_sc_blinky.c
dev/hal/: CMakeLists.txt
dev/hal/inc/: hal_gpio.h
dev/hal/src/: hal_gpio.c
dev/hardware/rp2040/: CMakeLists.txt
dev/hardware/rp2040/drivers/: CMakeLists.txt
dev/hardware/rp2040/drivers/inc/: drivers_gpio.h
dev/hardware/rp2040/drivers/src/: drivers_gpio.c
dev/hardware/rp2040/drivers/src/private/: drivers_gpio.h
dev/hardware/rp2040/inc/: platform_def.h
dev/hardware/rp2040/regs/: reg_clock.h  reg_gpio_bank0.h  reg_m0plus.h  reg_map.h  reg_pads_bank0.h  reg_pads_qspi.h  reg_pll.h  reg_rosc.h  reg_sio.h  reg_sio_div.h  reg_sio_gpio.h  reg_sio_interp.h  reg_ssi.h  reg_syscfg.h  reg_watchdog.h  reg_xosc.h  regs_reset.h
dev/hardware/rp2040/system/: CMakeLists.txt
dev/hardware/rp2040/system/boot/: CMakeLists.txt
dev/hardware/rp2040/system/boot/src/: boot_stage2.c
dev/hardware/rp2040/system/boot/src/private/: boot_stage2.h
dev/hardware/rp2040/system/linker/: linker_core0.ld
dev/hardware/rp2040/system/startup/: CMakeLists.txt
dev/hardware/rp2040/system/startup/src/: startup.c
dev/hardware/rp2040/system/startup/src/private/: startup.h
dev/inc/: project.h
dev/std-lib/: CMakeLists.txt
dev/std-lib/helper/: CMakeLists.txt
dev/std-lib/helper/inc/: helper_reg_access.h  helper_runtime.h
dev/std-lib/helper/src/: helper_runtime.c
dev/std-lib/helper/src/private/: helper_runtime.h
dev/std-lib/type/: CMakeLists.txt
dev/std-lib/type/inc/: types.h  types_errorcode.h
tools/: boot2_crc_patcher.py  uf2conv.py
